code/human_written_tests/WebAssembly/processed_control_flow_validation/test_return_19.wast
(assert_invalid
  (module (func $type-value-void-vs-num (result f64) (return (nop))))
  "type mismatch"
)